--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,66 +1,68 @@
 name: dizonli_app
-description: A mobile application for promoting physical activity through step tracking, community engagement, and gamification.
+description: "Application de suivi de pas et défis sportifs avec intégration sociale"
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.10.0"
+  sdk: ^3.5.4
 
 dependencies:
   flutter:
     sdk: flutter
+  
+  # UI & Design
+  cupertino_icons: ^1.0.8
   flutter_localizations:
     sdk: flutter
-  
-  # UI & Navigation
-  cupertino_icons: ^1.0.2
-  go_router: ^12.0.0
-  
-  # State Management
-  provider: ^6.0.5
-  
-  # Step Counter & Health
-  pedometer: ^4.0.2
-  health: ^13.0.0
-  permission_handler: ^11.0.1
-  
-  # Firebase & Authentication
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.1
-  cloud_firestore: ^5.4.4
-  firebase_messaging: ^15.1.3
-  
-  # HTTP & API
-  http: ^1.1.0
-  dio: ^5.3.2
-  
-  # Local Storage
-  shared_preferences: ^2.2.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  
-  # UI Components
-  flutter_svg: ^2.0.9
-  cached_network_image: ^3.3.0
-  shimmer: ^3.0.0
+  intl: any
+  google_fonts: ^6.2.1
+  fl_chart: ^0.65.0
   lottie: ^2.7.0
   
-  # Charts & Graphs
-  fl_chart: ^0.65.0
-  syncfusion_flutter_charts: ^31.1.22
+  # Firebase
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
+  firebase_messaging: ^15.2.10
+  
+  # State Management
+  provider: ^6.1.2
+  
+  # Local Storage
+  shared_preferences: ^2.3.5
   
   # Utils
-  intl: any
-  uuid: ^4.2.1
-  image_picker: ^1.0.4
+  uuid: ^4.5.1
+  screenshot: ^3.0.0
+  share_plus: ^7.2.2
+  path_provider: ^2.1.2
   
+  # Health & Sensors
+  pedometer: ^4.0.2
+  health: ^13.2.0
+  permission_handler: ^11.4.0
+  
+  # Navigation
+  go_router: ^12.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.7
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_background: "#4CAF50"
+  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  min_sdk_android: 26
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/icon/
+    - assets/animations/
