--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,32 +1,32 @@
 {
-    "name": "dizonli_app",
-    "short_name": "dizonli_app",
+    "name": "DIZONLI",
+    "short_name": "DIZONLI",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#4CAF50",
+    "theme_color": "#4CAF50",
+    "description": "DIZONLI - Marchons ensemble vers une meilleure santé",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "assets/icon/app_icon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
+            "src": "assets/icon/app_icon.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "assets/icon/app_icon.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "assets/icon/app_icon.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
