--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
   firebase_messaging: ^15.2.10
+  firebase_storage: ^12.4.0
   
   # State Management
   provider: ^6.1.2
@@ -36,6 +37,8 @@ dependencies:
   screenshot: ^3.0.0
   share_plus: ^7.2.2
   path_provider: ^2.1.2
+  image_picker: ^1.0.7
+  image_cropper: ^5.0.1
   
   # Health & Sensors
   pedometer: ^4.0.2
