--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
   fl_chart: ^0.65.0
   lottie: ^2.7.0
   
-  # Firebase
+  # Firebase (Auth, Firestore, Messaging)
   firebase_core: ^3.15.2
   firebase_auth: ^5.7.0
   cloud_firestore: ^5.6.12
   firebase_messaging: ^15.2.10
-  firebase_storage: ^12.4.0
+  
+  # Cloudinary (Image Storage)
+  cloudinary_public: ^0.21.0
   
   # State Management
   provider: ^6.1.2
